--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Rosarivo:ital@0;1&family=Rubik+Dirt&display=swap"
       rel="stylesheet"
     />
-    <title>Typing Game! (26 hours)</title>
+    <title>Typing Game!</title>
   </head>
   <body>
     <div class="overlay"></div>
